--- a/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
+++ b/movie-ticket/src/main/resources/templates/booking/dashboard-admin-booking.html
@@ -20,10 +20,12 @@
                             <div class="row">
                                 <div class="col-lg-5">
                                     <div class="col-lg-6 form-floating mb-3">
-                                        <input type="date" class="form-control" id="idCategory" name="dateSearch"
-                                               placeholder="Chọn ngày" th:value="${dateSearch}">
-                                        <label for="idCategory"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo
-                                            ngày chiếu</label>
+                                        <input style="min-width: 250px;" class="form-control" id="dateOrder"
+                                               type="text"/>
+                                        <input id="startDate" type="hidden" name="startDate"/>
+                                        <input id="endDate" type="hidden" name="endDate"/>
+                                        <label for="dateOrder"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo
+                                            thời gian</label>
                                     </div>
                                 </div>
                                 <div class="col-lg-7 d-flex justify-content-end">
@@ -65,13 +67,13 @@
                             <td>
                                 <a th:href="@{/dashboard/booking/view(id=${item.id})}" title="Xem chi tiết"><i
                                         class="fa-solid fa-file-lines"></i></a>
-                                <a th:href="@{/dashboard/booking/edit/__${item.id}__(movie=${item.showTime.movie.id})}"
-                                   title="Sửa"><i
-                                        class="fa-solid fa-pen-to-square"></i></a>
-                                <a type="button" th:attr="onclick=|sendDataModal('${item.id}','${item.codeBooking}')|"
-                                   title="Xóa"
-                                   role="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i
-                                        class="fa-solid fa-trash-can"></i></a>
+<!--                                <a th:href="@{/dashboard/booking/edit/__${item.id}__(movie=${item.showTime.movie.id})}"-->
+<!--                                   title="Sửa"><i-->
+<!--                                        class="fa-solid fa-pen-to-square"></i></a>-->
+<!--                                <a type="button" th:attr="onclick=|sendDataModal('${item.id}','${item.codeBooking}')|"-->
+<!--                                   title="Xóa"-->
+<!--                                   role="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i-->
+<!--                                        class="fa-solid fa-trash-can"></i></a>-->
                             </td>
                         </tr>
                         </tbody>
@@ -84,7 +86,8 @@
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()}+ '?page=' +
                             ${bookingPage.number - 1} +
-                            ${dateSearch != null && dateSearch != '' ? '&dateSearch='+dateSearch:''} +
+                            ${startDate != null && startDate != '' ? '&startDate='+startDate:''} +
+                            ${endDate != null && endDate != '' ? '&endDate='+endDate:''} +
                             ${phoneSearch != null && phoneSearch != '' ? '&phoneSearch='+phoneSearch:''}
                             }">Trước</a>
                         </li>
@@ -92,7 +95,8 @@
                             th:class="${i == bookingPage.number ? 'page-item active' : 'page-item'}">
                             <a class="page-link" th:text="${i + 1}" th:href="@{
                             ${#httpServletRequest.getRequestURI()} + '?page=' + ${i} +
-                            ${dateSearch != null && dateSearch != '' ? '&dateSearch='+dateSearch:''} +
+                            ${startDate != null && startDate != '' ? '&startDate='+startDate:''} +
+                            ${endDate != null && endDate != '' ? '&endDate='+endDate:''} +
                             ${phoneSearch != null && phoneSearch != '' ? '&phoneSearch='+phoneSearch:''}
                             }"></a>
                         </li>
@@ -100,7 +104,8 @@
                             <a class="page-link" th:href="@{
                             ${#httpServletRequest.getRequestURI()} + '?page=' +
                             ${bookingPage.number + 1} +
-                            ${dateSearch != null && dateSearch != '' ? '&dateSearch='+dateSearch:''} +
+                            ${startDate != null && startDate != '' ? '&startDate='+startDate:''} +
+                            ${endDate != null && endDate != '' ? '&endDate='+endDate:''} +
                             ${phoneSearch != null && phoneSearch != '' ? '&phoneSearch='+phoneSearch:''}
                             }">Tiếp</a>
                         </li>
@@ -150,6 +155,26 @@
 </div>
 <footer th:replace="~{layout::footer}"></footer>
 <script>
+    $(document).ready(function () {
+        $('#dateOrder').daterangepicker({
+            startDate: '08/11/2023',
+            endDate: '11/11/2023',
+            locale: {
+                format: 'DD-MM-YYYY'
+            },
+            language: 'vi'
+
+        }, function (start, end, label) {
+            let startDate = start.format("YYYY-MM-DD");
+            let endDate = end.format("YYYY-MM-DD");
+            $("#startDate").val(startDate);
+            $("#endDate").val(endDate);
+        });
+
+        $('#startDate').val('2023-11-08');
+        $('#endDate').val('2023-11-11');
+    });
+
     function sendDataModal(id, name) {
         document.getElementById("name").innerHTML = name;
         document.getElementById("id").value = id;
